test/e2e/testdata/policy-status-with-multiple-gatewayclasses.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gc-1
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gc-2
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-1
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: gc-1
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-2
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: gc-2
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-1
  namespace: gateway-conformance-infra
  labels:
    foo: bar
spec:
  parentRefs:
  - name: gateway-1
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-2
  namespace: gateway-conformance-infra
  labels:
    foo: bar
spec:
  parentRefs:
  - name: gateway-2
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: btp-target-multiple-gateway-classes-success
  namespace: gateway-conformance-infra
spec:
  targetSelectors:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    matchLabels:
      foo: bar
  timeout:
    http:
      connectionIdleTimeout: 21s
    tcp:
      connectTimeout: 20s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: btp-target-multiple-gateway-classes-failure
  namespace: gateway-conformance-infra
spec:
  targetSelectors:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    matchLabels:
      foo: bar
  rateLimit:
    type: Global
    global:
      rules:
      - clientSelectors:
        - headers:
          - name: x-user-id
            type: RegularExpression
            value: "*.illegal.regex"
        limit:
          requests: 10
          unit: Hour
